--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-<title>Trofim Andreevich Fedoseev</title>
+	<title>Trofim Andreevich Fedoseev</title>
 </head>
 <body>
-<p>
-Hello, World!
-</p>
+	<header>
+		<h1>
+		Trofim Andreevich Fedoseev
+		</h1>
+	</header>
+	<section>
+		...
+	</section>
 </body>
 </html>
