--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 <head>
 	<title>Trofim Andreevich Fedoseev</title>
 </head>
+
 <body>
-	<header>
-		<h1>
-		Trofim Andreevich Fedoseev
-		</h1>
-	</header>
+<header>
+	<h1>
+	Trofim Andreevich Fedoseev
+	</h1>
+	<p>
+	Student
+	</p>
+</header>
+
+<main>
+	<a alt="Russian version" href="/ru-index.html">
+
+	<aside>
+		<section>
+		<p>
+		<img alt="telegram logo" src="">
+		Telegram: @av10nyt
+		<br>
+		<img alt="github logo" src="/img/github-logo.svg">
+		GitHub: <a alt="fedoseevtaf" href="https://github.com/fedoseevtaf/">
+		</p>
+		</section>
+	</aside>
+
 	<section>
-		...
+		<h2>Skills</h2>
+		<p>
+		Python, C, x86 assembly
+		</p>
 	</section>
+	<section>
+		<h2>Education</h2>
+		<h3>Moscow State University</h3>
+		<p>
+		Currently I am the first year student at the Computational
+		Math and Cybernetics faculty of the Moscow State university.
+		</p>
+	</section>
+</main>
+
 </body>
 </html>
