--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </header>
 
 <main>
-	<a alt="Russian version" href="/ru-index.html">
+	<a href="/ru-index.html">Russian version</a>
 
 	<aside>
 		<section>
@@ -24,7 +24,7 @@
 		Telegram: @av10nyt
 		<br>
 		<img alt="github logo" src="/img/github-logo.svg">
-		GitHub: <a alt="fedoseevtaf" href="https://github.com/fedoseevtaf/">
+		GitHub: <a href="https://github.com/fedoseevtaf/">fedoseevtaf</a>
 		</p>
 		</section>
 	</aside>
