--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
 </header>
 
 <main>
-	<a href="/ru-index.html">Russian version</a>
-
 	<aside>
+		<nav>
+			<a href="/ru-index.html">Russian version</a>
+		</nav>
+
 		<section>
-		<p>
-		<img alt="telegram logo" src="">
-		Telegram: @av10nyt
-		<br>
-		<img alt="github logo" src="/img/github-logo.svg">
-		GitHub: <a href="https://github.com/fedoseevtaf/">fedoseevtaf</a>
-		</p>
+			<p>
+				<img alt="telegram logo" src="/img/telegram-logo.svg">
+				Telegram: @av10nyt
+				<br>
+
+				<img alt="github logo" src="/img/github-logo.svg">
+				GitHub:
+				<a href="https://github.com/fedoseevtaf/">fedoseevtaf</a>
+			</p>
 		</section>
 	</aside>
 
@@ -35,9 +39,13 @@
 		Python, C, x86 assembly
 		</p>
 	</section>
+
 	<section>
 		<h2>Education</h2>
-		<h3>Moscow State University</h3>
+		<h3>
+			Moscow State University
+			<img alt="MSU logo" src="/img/msu-logo-en.svg"
+		></h3>
 		<p>
 		Currently I am the first year student at the Computational
 		Math and Cybernetics faculty of the Moscow State university.
