--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 <head>
 	<title>Trofim Andreevich Fedoseev</title>
+	<link rel="stylesheet" href="styles/common.css">
+	<link rel="preload" href="/img/background.png">
 </head>
 
 <body>
@@ -14,44 +16,45 @@
 	</p>
 </header>
 
-<main>
-	<aside>
-		<nav>
-			<a href="/ru-index.html">Russian version</a>
-		</nav>
-
-		<section>
-			<p>
-				<img alt="telegram logo" src="/img/telegram-logo.svg">
-				Telegram: @av10nyt
-				<br>
-
-				<img alt="github logo" src="/img/github-logo.svg">
-				GitHub:
-				<a href="https://github.com/fedoseevtaf/">fedoseevtaf</a>
-			</p>
-		</section>
-	</aside>
+<aside>
+	<nav>
+		<a href="/ru-index.html">Russian version</a>
+	</nav>
 
 	<section>
-		<h2>Skills</h2>
 		<p>
-		Python, C, x86 assembly
-		</p>
-	</section>
+			<img alt="telegram logo" src="/img/telegram-logo.svg"
+				class="inline-img">
+			Telegram: @av10nyt
+			<br>
 
-	<section>
-		<h2>Education</h2>
-		<h3>
-			Moscow State University
-			<img alt="MSU logo" src="/img/msu-logo-en.svg"
-		></h3>
-		<p>
-		Currently I am the first year student at the Computational
-		Math and Cybernetics faculty of the Moscow State university.
+			<img alt="github logo" src="/img/github-logo.svg"
+				class="inline-img">
+			GitHub:
+			<a href="https://github.com/fedoseevtaf/">fedoseevtaf</a>
 		</p>
 	</section>
-</main>
+</aside>
+
+<section class="skills">
+	<h2>Skills</h2>
+	<p>
+	Python, C, x86 assembly
+	</p>
+</section>
+
+<section class="education">
+	<h2>Education</h2>
+	<h3>
+		Moscow State University
+		<img alt="MSU logo" src="/img/msu-logo-en.svg"
+			class="inline-img">
+	</h3>
+	<p>
+	Currently I am the first year student at the Computational
+	Math and Cybernetics faculty of the Moscow State university.
+	</p>
+</section>
 
 </body>
 </html>
