Write the resume text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="en-US">
 <head>
 	<title>Trofim Andreevich Fedoseev</title>
-	<link rel="stylesheet" href="styles/common.css">
+	<link rel="icon" type="image/svg+xml" href="/img/icon.svg">
+
+	<link rel="stylesheet" href="/styles/common.css">
+	<link rel="stylesheet" href="/styles/inline-img.css">
+	<link rel="stylesheet" href="/styles/fonts.css">
+
+	<link rel="preload" href="/fonts/OldStandardTT-Regular.ttf" as="font">
 	<link rel="preload" href="/img/background.png">
 </head>
 
@@ -12,47 +18,72 @@
 	Trofim Andreevich Fedoseev
 	</h1>
 	<p>
-	Student
+	student
 	</p>
 </header>
 
 <aside>
 	<nav>
-		<a href="/ru-index.html">Russian version</a>
+		<a href="/ru-index.html">
+			&#x1f1f7;&#x1f1fa; Русская версия
+		</a>
 	</nav>
 
 	<section>
-		<p>
+		<a href="https://t.me/av10nyt" target="_blank">
 			<img alt="telegram logo" src="/img/telegram-logo.svg"
 				class="inline-img">
 			Telegram: @av10nyt
-			<br>
+		</a>
 
+		<br>
+
+		<a href="https://github.com/fedoseevtaf/" target="_blank">
 			<img alt="github logo" src="/img/github-logo.svg"
 				class="inline-img">
-			GitHub:
-			<a href="https://github.com/fedoseevtaf/">fedoseevtaf</a>
-		</p>
+			GitHub: fedoseevtaf
+		</a>
 	</section>
 </aside>
 
 <section class="skills">
 	<h2>Skills</h2>
 	<p>
-	Python, C, x86 assembly
+		Python, C, x86 assembly
 	</p>
 </section>
 
 <section class="education">
 	<h2>Education</h2>
 	<h3>
-		Moscow State University
-		<img alt="MSU logo" src="/img/msu-logo-en.svg"
+		Moscow State University (in progress)
+		<!<img alt="MSU logo" src="/img/msu-logo-en.svg"
 			class="inline-img">
 	</h3>
 	<p>
-	Currently I am the first year student at the Computational
-	Math and Cybernetics faculty of the Moscow State university.
+		2024 - present time, bachelor
+	</p>
+	<p>
+		Currently I am the first year student at the Computational
+		Math and Cybernetics faculty of the Moscow State University.
+	</p>
+	<p>
+		While studying I have developed a practice-project integrating
+		modules written in C with modules written in x86 assembly.
+	</p>
+</section>
+
+<section class="projects">
+	<h2>Personal projects</h2>
+	<h3>mj</h3>
+	<p>
+		Mj - is a microtesting system, a simple utility with cli
+		for automation of test running. It's made for students like
+		me to help them solve algorithmic tasks in the process of
+		learning. You can see it on github here:
+		<a href="https://github.com/fedoseevtaf/mj">
+			fedoseevtaf/mj
+		</a>
 	</p>
 </section>
 
