Add preload as attribute otherwise browser ignores it

--- a/ru-index.html
+++ b/ru-index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="/styles/fonts.css">
 
 	<link rel="preload" href="/fonts/OldStandardTT-Regular.ttf" as="font">
-	<link rel="preload" href="/img/background.png">
+	<link rel="preload" href="/img/background.png" as="image">
 </head>
 
 <body>
