Set a blnk target for link to a pet project

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		for automation of test running. It's made for students like
 		me to help them solve algorithmic tasks in the process of
 		learning. You can see it on github here:
-		<a href="https://github.com/fedoseevtaf/mj">
+		<a href="https://github.com/fedoseevtaf/mj" target="_blank">
 			fedoseevtaf/mj
 		</a>
 	</p>
