--- a/ru-index.html
+++ b/ru-index.html
@@ -84,7 +84,7 @@
 		запуска тестов. Она разработана для таких же студентов, как я;
 		утилита помогает при решении алгоритмических задач во время обучения.
 		Гитхаб репозиторий:
-		<a href="https://github.com/fedoseevtaf/mj">
+		<a href="https://github.com/fedoseevtaf/mj" target="_blank">
 			fedoseevtaf/mj
 		</a>
 	</p>
