Fix unreadable russian text by setting charset

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Trofim Andreevich Fedoseev</title>
 	<link rel="icon" type="image/svg+xml" href="/img/icon.svg">
 
+	<meta charset="utf-8">
+
 	<link rel="stylesheet" href="/styles/common.css">
 	<link rel="stylesheet" href="/styles/inline-img.css">
 	<link rel="stylesheet" href="/styles/fonts.css">
@@ -24,7 +26,7 @@
 
 <aside>
 	<nav>
-		<a href="/ru-index.html">
+		<a lang="ru-RU" href="/ru-index.html">
 			&#x1f1f7;&#x1f1fa; Русская версия
 		</a>
 	</nav>
