--- a/ru-index.html
+++ b/ru-index.html
@@ -26,7 +26,7 @@
 
 <aside>
 	<nav>
-		<a href="/index.html">
+		<a lang="en-US" href="/index.html">
 			&#x1f1fa;&#x1f1f8; English version
 		</a>
 	</nav>
