--- a/ru-index.html
+++ b/ru-index.html
@@ -7,8 +7,10 @@
 	<meta charset="utf-8">
 
 	<link rel="stylesheet" href="/styles/common.css">
-	<link rel="stylesheet" href="/styles/inline-img.css">
 	<link rel="stylesheet" href="/styles/fonts.css">
+	<link rel="stylesheet" href="/styles/layout.css">
+	<link rel="stylesheet" href="/styles/headings.css">
+	<link rel="stylesheet" href="/styles/inline-img.css">
 
 	<link rel="preload" href="/fonts/OldStandardTT-Regular.ttf" as="font">
 	<link rel="preload" href="/img/background.png" as="image">
@@ -16,79 +18,85 @@
 
 <body>
 <header>
-	<h1>
-	Федосеев Трофим Андреевич
-	</h1>
-	<p>
-	студент
-	</p>
+	<hgroup>
+		<h1>
+		Федосеев Трофим Андреевич
+		</h1>
+		<p>
+		студент
+		</p>
+	</hgroup>
 </header>
 
+<nav>
+	<a lang="en-US" href="/index.html">
+		&#x1f1fa;&#x1f1f8; English version
+	</a>
+</nav>
+
 <aside>
-	<nav>
-		<a lang="en-US" href="/index.html">
-			&#x1f1fa;&#x1f1f8; English version
-		</a>
-	</nav>
+	<a href="https://t.me/av10nyt" target="_blank">
+		<img alt="telegram logo" src="/img/telegram-logo.svg"
+			class="inline-img">
+		Telegram: @av10nyt
+	</a>
 
-	<section>
-		<a href="https://t.me/av10nyt" target="_blank">
-			<img alt="telegram logo" src="/img/telegram-logo.svg"
-				class="inline-img">
-			Telegram: @av10nyt
-		</a>
+	<br>
 
-		<br>
-
-		<a href="https://github.com/fedoseevtaf/" target="_blank">
-			<img alt="github logo" src="/img/github-logo.svg"
-				class="inline-img">
-			GitHub: fedoseevtaf
-		</a>
-	</section>
+	<a href="https://github.com/fedoseevtaf/" target="_blank">
+		<img alt="github logo" src="/img/github-logo.svg"
+			class="inline-img">
+		GitHub: fedoseevtaf
+	</a>
 </aside>
 
-<section class="skills">
-	<h2>Навыки</h2>
-	<p>
-		Python, C, x86 assembly
-	</p>
-</section>
+<main>
+	<section class="skills">
+		<h2>Навыки</h2>
+		<p>
+			Python, C, x86 assembly
+		</p>
+	</section>
 
-<section class="education">
-	<h2>Образование</h2>
-	<h3>
-		МГУ (в процессе)
-		<!<img alt="MSU logo" src="/img/msu-logo-en.svg"
-			class="inline-img">
-	</h3>
-	<p>
-	2024 - настояшее время, бакалавриат
-	</p>
-	<p>
-		Я учусь на певом кусре факультета Вычислительной Математики и
-		Кибернетики МГУ.
-	</p>
-	<p>
-		Во время обучения разработал учебный проект, в котором
-		компоненты написанные на Си взаимодействуют с компонентами,
-		написанными на языке ассемблера.
-	</p>
-</section>
+	<section class="education">
+		<h2>Образование</h2>
+		<hgroup>
+			<h3>
+				МГУ (в процессе)
+				<!<img alt="MSU logo" src="/img/msu-logo-en.svg"
+					class="inline-img">
+			</h3>
+			<p>
+			2024 - настояшее время, бакалавриат
+			</p>
+		</hgroup>
+		<p>
+			Я учусь на певом кусре факультета Вычислительной Математики и
+			Кибернетики МГУ.
+		</p>
+		<p>
+			Во время обучения разработал учебный проект, в котором
+			компоненты написанные на Си взаимодействуют с компонентами,
+			написанными на языке ассемблера.
+		</p>
+	</section>
 
-<section class="projects">
-	<h2>Мои проекты</h2>
-	<h3>mj</h3>
-	<p>
-		Mj - это микро-тестирующая система, утилита для автоматического
-		запуска тестов. Она разработана для таких же студентов, как я;
-		утилита помогает при решении алгоритмических задач во время обучения.
-		Гитхаб репозиторий:
-		<a href="https://github.com/fedoseevtaf/mj" target="_blank">
-			fedoseevtaf/mj
-		</a>
-	</p>
-</section>
+	<section class="projects">
+		<h2>Мои проекты</h2>
+		<hgroup>
+			<h3>mj</h3>
+		</hgroup>
+		<p>
+			Mj - это микро-тестирующая система, утилита для автоматического
+			запуска тестов. Она разработана для таких же студентов, как я;
+			утилита помогает при решении алгоритмических задач во время обучения.
+			Гитхаб репозиторий:
+			<a href="https://github.com/fedoseevtaf/mj" target="_blank">
+				fedoseevtaf/mj
+			</a>
+		</p>
+	</section>
+</main>
 
 </body>
 </html>
