Add mentioning of my new project

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
 	<section class="projects">
 		<h2>Personal projects</h2>
+
 		<hgroup>
 			<h3>mj</h3>
 		</hgroup>
@@ -94,6 +95,20 @@
 				fedoseevtaf/mj
 			</a>
 		</p>
+
+		<hgroup>
+			<h3>nastx</h3>
+		</hgroup>
+		<p>
+			Nastx - is a simple library of functions which print out
+			state of the x87 floating point processing unit. I am making
+			it to simplify debugging for students who study x87
+			instruction set. You can see in on github here:
+			<a href="https://github.com/fedoseevtaf/nastx" target="_blank">
+				fedoseevtaf/nastx
+			</a>
+		</p>
+
 	</section>
 </main>
 
