--- a/ru-index.html
+++ b/ru-index.html
@@ -83,6 +83,7 @@
 
 	<section class="projects">
 		<h2>Мои проекты</h2>
+
 		<hgroup>
 			<h3>mj</h3>
 		</hgroup>
@@ -95,6 +96,20 @@
 				fedoseevtaf/mj
 			</a>
 		</p>
+
+		<hgroup>
+			<h3>nastx</h3>
+		</hgroup>
+		<p>
+			Nastx - это библиотека функций, печатающих состояние x87
+			сопроцессора. Я разрабатываю её чтобы упростить отладку,
+			для студентов, которые изучают набор интрукций x87.
+			Гитхаб репозиторий:
+			<a href="https://github.com/fedoseevtaf/nastx" target="_blank">
+				fedoseevtaf/nastx
+			</a>
+		</p>
+
 	</section>
 </main>
 
