Add link to download the resume

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
 </header>
 
 <nav>
-	<a lang="ru-RU" href="/ru-index.html">
+	<a id="ru_version" lang="ru-RU" href="/ru-index.html">
 		&#x1f1f7;&#x1f1fa; Русская версия
+	</a>
+
+	<a id="pdf_version" href="https://github.com/fedoseevtaf/fedoseevtaf.github.io/releases/download/untagged-a8477c7c63b9e2c0ba2d/resume.pdf">
+		&#x1f4be; Download pdf version
 	</a>
 </nav>
 
@@ -40,8 +44,6 @@
 			class="inline-img">
 		Telegram: @av10nyt
 	</a>
-
-	<br>
 
 	<a href="https://github.com/fedoseevtaf/" target="_blank">
 		<img alt="github logo" src="/img/github-logo.svg"
