--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 </header>
 
 <nav>
-	<a id="ru_version" lang="ru-RU" href="/ru-index.html">
+	<a lang="ru-RU" href="/ru-index.html">
 		&#x1f1f7;&#x1f1fa; Русская версия
 	</a>
 
-	<a id="pdf_version" href="https://github.com/fedoseevtaf/fedoseevtaf.github.io/releases/download/untagged-a8477c7c63b9e2c0ba2d/resume.pdf">
+	<a href="https://github.com/fedoseevtaf/fedoseevtaf.github.io/releases/download/resume/resume.pdf">
 		&#x1f4be; Download pdf version
 	</a>
 </nav>
