--- a/ru-index.html
+++ b/ru-index.html
@@ -32,6 +32,10 @@
 	<a lang="en-US" href="/index.html">
 		&#x1f1fa;&#x1f1f8; English version
 	</a>
+
+	<a href="https://github.com/fedoseevtaf/fedoseevtaf.github.io/releases/download/resume/ru-resume.pdf">
+		&#x1f4be; Скачать pdf версию
+	</a>
 </nav>
 
 <aside>
